# pimpl-but-the-p-is-silent

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yaml
cmake/: impl-private-storage.cmake  impl-private-storage.cpp
include/: impl.hpp
source/: impl-private.cpp  impl-private.hpp  impl.cpp
test/: impl-test.cpp
